# WavMarkEnhanced

./: README.md  pyproject.toml  setup.py
src/wavmark/: __init__.py
src/wavmark/models/: my_model.py
src/wavmark/utils/: wm_add_util.py  wm_decode_util.py
wavmark-main/src/wavmark/models/: my_model.py
wavmark-main/src/wavmark/utils/: wm_add_util.py
